fix alignment and spacing of colors in 860px or larger query

--- a/css/main.css
+++ b/css/main.css
@@ -161,6 +161,10 @@ button:hover {
         width: 40%;
     }
 
+    #color-examples {
+        text-align: center;
+    }
+
     #color-examples section {
         width: 30%;
     }
@@ -170,6 +174,6 @@ button:hover {
     }
 
     #color-examples section + section {
-        margin-left: 2.5%;
+        margin-left: 5%;
     }
 }
